<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    android:padding="10dp"
    tools:context=".ProfileActivity">

    <EditText
        android:id="@+id/edName111112"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/enter_new_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btSaveName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickSave"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edStarthours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_start_hours"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edName111112"
        app:layout_constraintStart_toStartOf="@+id/edName111112"
        app:layout_constraintTop_toBottomOf="@+id/edName111112" />

    <EditText
        android:id="@+id/edWorkhours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_work_hours"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edStarthours"
        app:layout_constraintStart_toStartOf="@+id/edStarthours"
        app:layout_constraintTop_toBottomOf="@+id/edStarthours" />

    <EditText
        android:id="@+id/edWordsForYou"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/enter_few_words"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btSaveName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edWorkhours"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>